Changed selected state

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
         placeholder="Enter Keyword" />
       <input type="search" id="city" name="name" placeholder="City" />
       <select id="state" name="country">
-        <option value="TX" selected>TX</option>
+        <option value="TX">TX</option>
         <option value="LA">LA</option>
-        <option value="IL">IL</option>
+        <option value="IL" selected>IL</option>
         <option value="CA">CA</option>
       </select>
       <input type="number" id="limit" placeholder="100" />
